[project]
name = "my-package"
version = "0.1.0"
description = "Supplements simple tutorial explaining how to reuse your personal code using UV."
readme = "README.md"
authors = [
    { name = "veronica-yyc", email = "veronica-yyc" }
]
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
]

[project.scripts]
my-package = "my_package:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
